# PrivaSend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACTIVE_DISCUSSION_CONTEXT.md  AGENTIC_BIBLE.md  CLAUDE.md  Chat with Team.txt  Dockerfile  FINAL_DECISIONS.md  MVP_Presentation.html  PRD_v2.0.md  PROJECT_REVIEW_2026-02-06.md  PrivaSend - Product Requirements Doc.docx  ROADMAP.md  STATE.md  Sahil.md  TEAM_BRIEF_Jan27.txt  n8n_regex_architecture_evaluation.md  presidio_integration_guide.md  pyproject.toml  team-briefing.html  try_it.py
.claude/: settings.json  settings.local.json
.planning/: CONTEXT_MANAGEMENT.md  MVP_ARCHITECTURE_PIVOT.md  REQUIREMENTS.md
docs/: AI_SESSION_BRIEFING.md  architecture.md
server/: main.py
server/static/: index.html
tests/: dataset_adversarial.py  dataset_realistic.py  test_audit.py  test_detect_pii.py  test_evaluation.py  test_indian_address.py  test_llm_validator.py  test_presidio.py  test_quality_fixes.py  test_redact.py
tools/: audit.py  auth.py  config.py  detect_pii.py  file_extractor.py  indian_address_recognizer.py  llm_validator.py  openrouter.py  pii_categories.py  redact.py  supabase_client.py
workflows/: add_pii_type.md  detect_pii.md  evaluate_accuracy.md  redact_text.md
